alteração no html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sowilo Terapias</title>
+    <title>Sowelu Terapias</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -93,8 +93,8 @@
     </video>
     <header>
         <div class="header-content">
-            <h1>Sowilo 💎 Terapias</h1>
-            <p>Olá, sou a Sowilo, quer saber como funciona o tratamento energético?</p>
+            <h1>Sowelu 💎 Terapias</h1>
+            <p>Olá, sou a Sowelu, quer saber como funciona o tratamento energético?</p>
             <p>Aqui iremos alinhar os seus Chakras e Aura e campo de energia para que você esteja mais protegido(a).</p>
         </div>
         <img src="./assets/sowilo-central-leão.png" alt="mulher-com-leão" class="header-image">
@@ -111,9 +111,7 @@
     <main class="container">
         <section id="about" class="about">
             <h2>Sobre Mim</h2>
-            <p>Olá! Sou Sonia Apolinário, terapeuta a anos de experiência em ajudar pessoas a encontrar equilíbrio e
-                bem-estar. Minha abordagem é centrada no cliente, utilizando técnicas personalizadas para cada
-                indivíduo.</p>
+            <p>Olá! Sou Sonia Apolinário, sou Terapeuta Ocupacional dedicada a promover autonomia, bem-estar e qualidade de vida para meus pacientes. Acredito no potencial de cada indivíduo e utilizo abordagens personalizadas para ajudar na recuperação de habilidades, adaptação aos desafios e construção de uma rotina funcional e equilibrada. Com uma abordagem humanizada e empática, buscamos sempre compreender as necessidades de cada pessoa, oferecendo suporte para que possam alcançar sua melhor versão no dia a dia.</p>
         </section>
         <section id="gallery" class="gallery">
             <h2>Galeria</h2>
