alteração na section do html

--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
         </section>
         <section id="contact" class="contact">
             <h2>Contato</h2>
-            <p>Entre em contato comigo através do e-mail: [Soniaapolinario465@gmail.com] ou pelo telefone: [11
-                986461652].</p>
+            <p>Entre em contato comigo através do e-mail: <strong>soniaapo2528@gmail.com</strong> ou pelo telefone: <strong>11
+                986461652</strong></p>
         </section>
         <section class="faq">
             <h2>Perguntas Frequentes</h2>
@@ -183,11 +183,12 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
-    <a href="https://wa.me/5511986461652" target="_blank" class="whatsapp-link">
+    <a href="https://wa.me/5511986461652?text=Olá, Sowelu! Gostaria de saber mais sobre as sessões de terapia que você oferece. Poderia me dar mais informações?
+    " target="_blank" class="whatsapp-link">
         <img src="./assets/icon whats.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
     <footer>
-        <p>&copy; 2023 Sowilo Terapias - Alinhando sua energia para um bem-estar completo.</p>
+        <p>&copy; 2023 Sowelu Terapias - Alinhando sua energia para um bem-estar completo.</p>
     </footer>
 
     <script>
