alteração na section no html

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <main class="container">
         <section id="about" class="about">
             <h2>Sobre Mim</h2>
-            <p>Olá! Sou Sonia Apolinário, sou Terapeuta Ocupacional dedicada a promover autonomia, bem-estar e qualidade de vida para meus pacientes. Acredito no potencial de cada indivíduo e utilizo abordagens personalizadas para ajudar na recuperação de habilidades, adaptação aos desafios e construção de uma rotina funcional e equilibrada. Com uma abordagem humanizada e empática, buscamos sempre compreender as necessidades de cada pessoa, oferecendo suporte para que possam alcançar sua melhor versão no dia a dia.</p>
+            <p>Olá! Sou Sonia Apolinário, sou Terapeuta vibracional dedicada a promover autonomia, bem-estar e qualidade de vida para meus pacientes. Acredito no potencial de cada indivíduo e utilizo abordagens personalizadas para ajudar na recuperação de habilidades, adaptação aos desafios e construção de uma rotina funcional e equilibrada. Com uma abordagem humanizada e empática, buscamos sempre compreender as necessidades de cada pessoa, oferecendo suporte para que possam alcançar sua melhor versão no dia a dia.</p>
         </section>
         <section id="gallery" class="gallery">
             <h2>Galeria</h2>
