--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sowelu Terapias</title>
+    <title>Raio de Luz Terapias</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -93,8 +93,8 @@
     </video>
     <header>
         <div class="header-content">
-            <h1>Sowelu 💎 Terapias</h1>
-            <p>Olá, sou a Sowelu, quer saber como funciona o tratamento energético?</p>
+            <h1>Raio de Luz 💎 Terapias</h1>
+            <p>Olá, sou a Sonia Apolinário, quer saber como funciona o tratamento energético?</p>
             <p>Aqui iremos alinhar os seus Chakras e Aura e campo de energia para que você esteja mais protegido(a).</p>
         </div>
         <img src="./assets/sowilo-central-leão.png" alt="mulher-com-leão" class="header-image">
@@ -188,7 +188,7 @@
         <img src="./assets/icon whats.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
     <footer>
-        <p>&copy; 2023 Sowelu Terapias - Alinhando sua energia para um bem-estar completo.</p>
+        <p>&copy; 2023 Raio de Luz Terapias - Alinhando sua energia para um bem-estar completo.</p>
     </footer>
 
     <script>
