alterando o nome do arquivo

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
     </main>
-    <a href="https://wa.me/5511986461652?text=Olá, Sowelu! Gostaria de saber mais sobre as sessões de terapia que você oferece. Poderia me dar mais informações?
+    <a href="https://wa.me/5511986461652?text=Olá, Sonia Apolinário! Gostaria de saber mais sobre as sessões de terapia que você oferece. Poderia me dar mais informações?
     " target="_blank" class="whatsapp-link">
         <img src="./assets/icon whats.png" alt="WhatsApp" class="whatsapp-icon">
     </a>
